# liboai

./: CMakeLists.txt
cmake/: Config.cmake.in  setup_export_set_installation.cmake
source/components/: audio.cpp  azure.cpp  chat.cpp  completions.cpp  edits.cpp  embeddings.cpp  files.cpp  fine_tunes.cpp  images.cpp  models.cpp  moderations.cpp
source/core/: authorization.cpp  netimpl.cpp  response.cpp
